# network_scanner

./: auth.py  crud.py  database.py  main.py  models.py  my_database.db  pyproject.toml
static/: style.css
templates/: admin.html  base.html  index.html  login.html  material.html
